# trafficsim

./: .gitignore  CMakeLists.txt  Car.cpp  Car.h  CarsModel.cpp  CarsModel.h  CrossroadPassagesModel.cpp  CrossroadPassagesModel.h  CrossroadSide.cpp  CrossroadSide.h  CrossroadSidesModel.cpp  CrossroadSidesModel.h  Curve.cpp  Curve.h  DataRoles.h  LICENSE  Lane.cpp  Lane.h  MapGraph.cpp  MapGraph.h  Node.cpp  Node.h  NodesModel.cpp  NodesModel.h  Passage.cpp  Passage.h  QmlPresenter.cpp  QmlPresenter.h  RegularCrossroad.cpp  RegularCrossroad.h  RoadLane.cpp  RoadLane.h  RoadLanesModel.cpp  RoadLanesModel.h  main.cpp
resources/: meshes.qrc  meshes_a45.qrc  meshes_xc70.qrc  qml.qrc
resources/models3d/a45/: A45.qml
resources/models3d/xc70/: XC70.qml
resources/qml/: Car.qml  Car3DView.qml  CarInfo.qml  CarScene3D.qml  ControlPanel.qml  Crossroad.qml  CrossroadConstructor.qml  CrossroadSide.qml  CrossroadSideHighlighter.qml  Curve.qml  DrawArea.qml  Lane.qml  MapRuler.qml  Passage.qml  PassageConstructor.qml  RoadLane.qml  TSButton.qml  main.qml
resources/qml/Constants/: Colors.qml  Sizes.qml  qmldir
